<resources>
    <string name="app_name">Visual Music</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="map_loading">地图正在加载...</string>
    <string name="net_error">网络错误，请检查网络连接</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_slide">Slide</string>
    <string name="title_activity_bottom">Bottom</string>
    <string name="my_works">我的作品</string>
    <string name="my_lyrics">我的填词</string>
    <string name="user">账号</string>
    <string name="enter_user">请输入账号</string>
    <string name="password">密码</string>
    <string name="enter_password">请输入密码</string>
    <string name="enter_song_name">输入歌名</string>
    <string name="enter_lyric">输入歌词</string>
    <string name="signup">注册</string>
    <string name="login">登录</string>

    <string name="to_songs">填词成曲</string>
    <string name="to_opern">由曲成谱</string>
    <string name="match_song">依景配曲</string>
    <string name="my_likes">我的喜欢</string>
    <string name="my_friends">我的好友</string>
    <string name="arround">附近音乐</string>
    <string name="my_info">我的资料</string>
    <string name="settings">设置</string>

    <string name="my_songs">我的乐曲</string>
    <string name="username">username</string>
    <string name="music_circle">音乐圈</string>
    <string name="message">消息</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>



    <string name="choose_song">Choose Song</string>
    <string name="song_settings_str">Song Settings</string>
    <string name="save_images_str">Save As Images</string>
    <string name="save_images_descr_str">Save the sheet music as images, in the directory /Pictures/MidiSheetMusic, with the following filename</string>
    <string name="help_str">Help</string>
    <string name="sheet_prefs_title">Sheet Music Preferences</string>
    <string name="restore_defaults">Restore Default Settings</string>
    <string name="select_tracks_to_display">Select Tracks to Display</string>
    <string name="select_tracks_to_mute">Select Tracks to Mute</string>
    <string name="select_instruments_per_track">Select Instruments For Each Track</string>
    <string name="set_all_to_piano">Set All Instruments to Piano</string>
    <string name="scroll_vertically">Scroll Vertically</string>
    <string name="show_piano">Show the Piano</string>
    <string name="show_lyrics">Show Lyrics</string>
    <string name="show_note_letters">Show Note Letters</string>
    <string name="combine_to_two_staffs">Combine To Two Staffs</string>
    <string name="combine_to_two_staffs_summary">Combine all the tracks into two staffs (left hand and right hand staffs). </string>
    <string name="split_to_two_staffs">Split Track Into Two Staffs</string>
    <string name="split_to_two_staffs_summary">Split the single track into two staffs (left hand and right hand staffs).</string>
    <string name="transpose">Transpose Notes</string>
    <string name="key_signature">Key Signature</string>
    <string name="time_signature">Time Signature</string>
    <string name="combine_interval">Combine Interval</string>
    <string name="combine_interval_summary">Notes within the given interval (in milliseconds) are combined into a single chord</string>
    <string name="right_hand_color">Right Hand Color</string>
    <string name="left_hand_color">Left Hand Color</string>
    <string name="show_measures">Show Measure Numbers</string>
    <string name="play_measures_in_loop_title">Settings for Play Measures in a Loop</string>
    <string name="play_measures_in_loop">Play Measures in a Loop</string>
    <string name="play_measures_in_loop_start">Start Measure</string>
    <string name="play_measures_in_loop_end">End Measure</string>
    <string name="scan_button_title">Scan SD Card for MIDI files</string>
    <string name="scan_files_str">Scan for MIDI Files</string>
    <string name="browse_files_str">Browse for MIDI Files</string>

</resources>
