<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_nobutton"
    android:visibility="visible"
    tools:context="com.axone.vsmusic.activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_white_frame">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:lines="1"
                android:padding="1dp"
                android:text="@string/user"
                android:textSize="12sp" />

            <View
                android:id="@+id/view1"
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_toRightOf="@+id/textView1"
                android:layout_toEndOf="@+id/textView1"
                android:background="#EEEFFF" />

            <EditText
                android:id="@+id/login_et_username"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_toRightOf="@+id/view1"
                android:layout_toEndOf="@+id/view1"
                android:background="@drawable/transparent"
                android:ems="19"
                android:hint="@string/enter_user"
                android:inputType="phone"
                android:padding="1dp"
                android:textSize="12sp">

                <requestFocus />
            </EditText>

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/shape_white_frame"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="1dp"
                android:text="@string/password"
                android:textSize="12sp" />

            <View
                android:id="@+id/view2"
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_toRightOf="@+id/textView2"
                android:layout_toEndOf="@+id/textView2"
                android:background="#EEEFFF" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_toRightOf="@+id/view2"
                android:layout_toEndOf="@+id/view2"
                android:background="@drawable/transparent"
                android:ems="19"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="1dp"
                android:textSize="12sp">

                <requestFocus />
            </EditText>

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/login_bt_login"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:background="@mipmap/login_button"
            android:padding="1dp"
            android:text="@string/login"
            android:textColor="@color/green_light_dark"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_marginTop="32dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="107dp"
            android:layout_marginStart="107dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/login_bt_register"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:background="@mipmap/login_button"
            android:padding="1dp"
            android:text="@string/signup"
            android:textColor="@color/green_light_dark"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_marginTop="32dp"
            android:layout_marginRight="107dp"
            android:layout_marginEnd="107dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <TextView
            android:id="@+id/login_tv_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>
